 * src/editor.c:
   Allow autocompletion in Perl double-quoted strings.
   Don't autocomplete in Perl single-quoted strings (closes #2821061).
   Don't autocomplete in Perl q() strings.
 * data/filetypes.common:
   Make Mark highlighting brighter.
 * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
   Use hyphen for auto-feature terms.


2009-07-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, src/about.c, src/filetypes.c, src/document.c,
   src/document.h, src/main.c, THANKS:
   Apply patch from Eugene Arshinov to reload color schemes via menu
   (thanks).
 * src/filetypes.c:
   Reload filetypes.common after saving it.
 * src/editor.c:
   Improve wrong brace highlighting of non-brace character.


2009-07-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Delay highlighting matching braces by 100ms, which speeds up
   scrolling with the arrow keys.
 * src/keybindings.c, src/keybindings.h, src/search.c, src/search.h:
   Add 'Mark All' keybinding.
 * tagmanager/diff.c:
   Show relative paths in diff filename tags.


2009-07-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/highlighting.c:
   Fix setting keyword list 'classes' for Haxe
   (pointed out by Andreas Mokros, thanks).


2009-07-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keyfile.c, src/editor.c, src/editor.h,
   doc/geany.txt, doc/geany.html, geany.glade:
   Add 'Drop rest of word on completion' pref.
 * src/editor.c, doc/geany.txt, doc/geany.html:
   If autocompletion is already visible when forcing completion, show
   document word completion instead of tag completion.
   Docs: Minor edits of related prefs items.
 * src/printing.c, src/dialogs.c, src/dialogs.h, src/plugindata.h:
   Add warning when printing and editor font is not monospaced.
   Fix using GtkMessageType instead of gint param for
   dialogs_show_msgbox*().