@@ -141,9 +141,10 @@ struct GeanyFiletype
 
 extern GPtrArray *filetypes_array;
 
-/* Wrap filetypes_array so it can be used with C array syntax.
- * Example: filetypes[GEANY_FILETYPES_C]->name = ...; */
-#define filetypes	((GeanyFiletype **)filetypes_array->pdata)
+/** Wrap filetypes_array so it can be used with C array syntax.
+ * Example: filetypes[GEANY_FILETYPES_C]->name = ...;
+ * @see filetypes_index(). */
+#define filetypes	((GeanyFiletype **)GEANY(filetypes_array)->pdata)
 
 extern GSList *filetypes_by_title;
 
