@@ -39,6 +39,9 @@
 #   define PLAT_GTK 1	/* needed when including ScintillaWidget.h */
 #endif
 
+/* Compatibility for sharing macros between API and core, overridden in plugindata.h */
+#define GEANY(symbol_name) symbol_name
+
 
 /* for detailed description look in the documentation, things are not
  * listed in the documentation should not be changed */
